// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`smithyProjectGenerator > shape libraries > should generate a shape library without a service > shapes-main.smithy 1`] = `
"$version: "2.0"

namespace proj

/// TODO: define the shapes you would like to share between your Smithy projects
structure ExampleShape {
    @required
    id: String

    description: String
}
"
`;

exports[`smithyProjectGenerator > shape libraries > should generate a shape library without a service > shapes-project.json 1`] = `
"{
  "name": "@proj/test-shapes",
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "test-shapes/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "shapes",
    "namespace": "proj"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile"]
    },
    "compile": {
      "cache": true,
      "outputs": [
        "{workspaceRoot}/dist/{projectRoot}/smithy",
        "{workspaceRoot}/dist/{projectRoot}/build/model.json"
      ],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "npx -y mise@2026.8.3 exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "ncp dist/{projectRoot}/smithy/source/model/model.json dist/{projectRoot}/build/model.json"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > shape libraries > should generate a shape library without a service > shapes-smithy-build.json 1`] = `
"{
  "version": "1.0",
  "sources": ["src/"],
  "maven": {
    "dependencies": ["software.amazon.smithy:smithy-model:1.72.1"]
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with all custom options > all-custom-main.smithy 1`] = `
"$version: "2.0"

namespace com.mycompany.api

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("MyCustomService")
@restJson1
service MyCustomService {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with all custom options > all-custom-project.json 1`] = `
"{
  "name": "@proj/test-api",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "backend/model/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "service",
    "namespace": "com.mycompany.api",
    "apiName": "test-api"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile", "generate-ssdk"]
    },
    "compile": {
      "cache": true,
      "outputs": [
        "{workspaceRoot}/dist/{projectRoot}/smithy",
        "{workspaceRoot}/dist/{projectRoot}/build/openapi"
      ],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "npx -y mise@2026.8.3 exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "cpy \\"dist/{projectRoot}/smithy/source/openapi/*.openapi.json\\" dist/{projectRoot}/build/openapi --flat --rename=openapi.json"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    },
    "generate-ssdk": {
      "cache": true,
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/build/ssdk"],
      "executor": "nx:run-commands",
      "dependsOn": ["compile"],
      "options": {
        "commands": [
          "npm install --prefix dist/{projectRoot}/smithy/source/typescript-ssdk-codegen --include=dev --ignore-scripts --no-audit --no-fund",
          "rolldown -c {projectRoot}/ssdk.rolldown.config.mjs"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with custom directory > custom-dir-project.json 1`] = `
"{
  "name": "@proj/test-api",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "apis/test-api/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "service",
    "namespace": "proj",
    "apiName": "test-api"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile", "generate-ssdk"]
    },
    "compile": {
      "cache": true,
      "outputs": [
        "{workspaceRoot}/dist/{projectRoot}/smithy",
        "{workspaceRoot}/dist/{projectRoot}/build/openapi"
      ],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "npx -y mise@2026.8.3 exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "cpy \\"dist/{projectRoot}/smithy/source/openapi/*.openapi.json\\" dist/{projectRoot}/build/openapi --flat --rename=openapi.json"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    },
    "generate-ssdk": {
      "cache": true,
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/build/ssdk"],
      "executor": "nx:run-commands",
      "dependsOn": ["compile"],
      "options": {
        "commands": [
          "npm install --prefix dist/{projectRoot}/smithy/source/typescript-ssdk-codegen --include=dev --ignore-scripts --no-audit --no-fund",
          "rolldown -c {projectRoot}/ssdk.rolldown.config.mjs"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with custom namespace > custom-namespace-main.smithy 1`] = `
"$version: "2.0"

namespace com.example.custom

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("TestApi")
@restJson1
service TestApi {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with custom service name > custom-service-main.smithy 1`] = `
"$version: "2.0"

namespace proj

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("CustomService")
@restJson1
service CustomService {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > echo.smithy 1`] = `
"$version: "2.0"

namespace proj

/// An example operation
@http(method: "GET", uri: "/echo")
@readonly
operation Echo {
    input := {
        @httpQuery("message")
        @required
        @length(max: 1024)
        message: String
    }
    output := {
        @required
        message: String
    }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > main.smithy 1`] = `
"$version: "2.0"

namespace proj

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("TestApi")
@restJson1
service TestApi {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > project.json 1`] = `
"{
  "name": "@proj/test-api",
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "test-api/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "service",
    "namespace": "proj",
    "apiName": "test-api"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile", "generate-ssdk"]
    },
    "compile": {
      "cache": true,
      "outputs": [
        "{workspaceRoot}/dist/{projectRoot}/smithy",
        "{workspaceRoot}/dist/{projectRoot}/build/openapi"
      ],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "npx -y mise@2026.8.3 exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "cpy \\"dist/{projectRoot}/smithy/source/openapi/*.openapi.json\\" dist/{projectRoot}/build/openapi --flat --rename=openapi.json"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    },
    "generate-ssdk": {
      "cache": true,
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/build/ssdk"],
      "executor": "nx:run-commands",
      "dependsOn": ["compile"],
      "options": {
        "commands": [
          "npm install --prefix dist/{projectRoot}/smithy/source/typescript-ssdk-codegen --include=dev --ignore-scripts --no-audit --no-fund",
          "rolldown -c {projectRoot}/ssdk.rolldown.config.mjs"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > smithy-build.json 1`] = `
"{
  "version": "1.0",
  "sources": ["src/"],
  "plugins": {
    "openapi": {
      "service": "proj#TestApi",
      "version": "3.1.0",
      "tags": true,
      "useIntegerType": true
    },
    "typescript-ssdk-codegen": {
      "package": "@proj/test-api-ssdk",
      "packageVersion": "0.0.1"
    }
  },
  "maven": {
    "dependencies": [
      "software.amazon.smithy:smithy-model:1.72.1",
      "software.amazon.smithy:smithy-aws-traits:1.72.1",
      "software.amazon.smithy:smithy-validation-model:1.72.1",
      "software.amazon.smithy:smithy-openapi:1.72.1",
      "software.amazon.smithy.typescript:smithy-aws-typescript-codegen:0.52.0"
    ]
  }
}
"
`;

exports[`smithyProjectGenerator > should generate smithy project with default options > ssdk.rolldown.config.mjs 1`] = `
"import fs from 'node:fs';
import path from 'node:path';
import { dts } from 'rolldown-plugin-dts';

// The Smithy CLI generates the Server SDK under dist, along with its own
// dependencies, so paths are resolved from there rather than this project. The
// compile target runs from the workspace root, so these resolve there.
const ssdkDir = path.resolve(
  'dist',
  'test-api',
  'smithy/source/typescript-ssdk-codegen',
);

// Embed the re2 wasm binary in its emscripten glue module (\`Module.wasmBinary\`),
// so the bundle stays a single self-contained file. \`__dirname\` is what the
// glue's on-disk fallback would read, which an ES module doesn't define.
const inlineRe2Wasm = () => ({
  name: 'inline-re2-wasm',
  load: (id) => {
    if (!/re2-wasm.*[\\\\/]wasm[\\\\/]re2\\.js$/.test(id)) return null;
    const wasm = fs.readFileSync(path.join(path.dirname(id), 're2.wasm'));
    return \`var __dirname = '';\\nvar Module = { wasmBinary: Buffer.from("\${wasm.toString('base64')}", "base64") };\\n\${fs.readFileSync(id, 'utf8')}\`;
  },
});

// Drop any import whose specifier resolves to the importing module itself. A
// module cannot import its own exports — the Smithy CLI's Windows codegen writes
// exactly that, which the bundler rejects as an assignment to an import.
const dropSelfImports = () => ({
  name: 'drop-self-imports',
  transform: (code, id) => ({
    code: code.replace(
      /^import\\s+[^;]*?\\s+from\\s+["'](\\.[^"']*)["'];?\\s*$/gm,
      (line, specifier) =>
        path.resolve(path.dirname(id), specifier) ===
        id.replace(/\\.[cm]?tsx?$/, '')
          ? ''
          : line,
    ),
    map: null,
  }),
});

const outDir = path.resolve('dist', 'test-api', 'build/ssdk');

// Bundle from the generated TypeScript sources, emitting the module and its
// declarations in one pass.
export default {
  input: path.join(ssdkDir, 'src/index.ts'),
  plugins: [dropSelfImports(), inlineRe2Wasm(), dts({ resolve: true })],
  output: [{ dir: outDir, format: 'es' }],
  platform: 'node',
};
"
`;

exports[`smithyProjectGenerator > should generate smithy project with subdirectory > subdir-project.json 1`] = `
"{
  "name": "@proj/test-api",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "services/model/src",
  "projectType": "library",
  "metadata": {
    "generator": "smithy#project",
    "smithyType": "service",
    "namespace": "proj",
    "apiName": "test-api"
  },
  "targets": {
    "build": {
      "dependsOn": ["compile", "generate-ssdk"]
    },
    "compile": {
      "cache": true,
      "outputs": [
        "{workspaceRoot}/dist/{projectRoot}/smithy",
        "{workspaceRoot}/dist/{projectRoot}/build/openapi"
      ],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "rimraf dist/{projectRoot}/build",
          "rimraf dist/{projectRoot}/smithy",
          "make-dir dist/{projectRoot}/build",
          "npx -y mise@2026.8.3 exec smithy@1.72.1 -- smithy build -c {projectRoot}/smithy-build.json --output dist/{projectRoot}/smithy",
          "cpy \\"dist/{projectRoot}/smithy/source/openapi/*.openapi.json\\" dist/{projectRoot}/build/openapi --flat --rename=openapi.json"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    },
    "generate-ssdk": {
      "cache": true,
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/build/ssdk"],
      "executor": "nx:run-commands",
      "dependsOn": ["compile"],
      "options": {
        "commands": [
          "npm install --prefix dist/{projectRoot}/smithy/source/typescript-ssdk-codegen --include=dev --ignore-scripts --no-audit --no-fund",
          "rolldown -c {projectRoot}/ssdk.rolldown.config.mjs"
        ],
        "parallel": false,
        "cwd": "{workspaceRoot}"
      }
    }
  }
}
"
`;

exports[`smithyProjectGenerator > should handle empty service name by using project name > default-service-name-main.smithy 1`] = `
"$version: "2.0"

namespace proj

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("MyService")
@restJson1
service MyService {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should handle kebab-case conversion for service names > kebab-case-main.smithy 1`] = `
"$version: "2.0"

namespace proj

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("MyTestService")
@restJson1
service MyTestService {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;

exports[`smithyProjectGenerator > should handle kebab-case conversion for service names > kebab-case-smithy-build.json 1`] = `
"{
  "version": "1.0",
  "sources": ["src/"],
  "plugins": {
    "openapi": {
      "service": "proj#MyTestService",
      "version": "3.1.0",
      "tags": true,
      "useIntegerType": true
    },
    "typescript-ssdk-codegen": {
      "package": "@proj/my-test-service-ssdk",
      "packageVersion": "0.0.1"
    }
  },
  "maven": {
    "dependencies": [
      "software.amazon.smithy:smithy-model:1.72.1",
      "software.amazon.smithy:smithy-aws-traits:1.72.1",
      "software.amazon.smithy:smithy-validation-model:1.72.1",
      "software.amazon.smithy:smithy-openapi:1.72.1",
      "software.amazon.smithy.typescript:smithy-aws-typescript-codegen:0.52.0"
    ]
  }
}
"
`;

exports[`smithyProjectGenerator > should use npm scope for default namespace > npm-scope-main.smithy 1`] = `
"$version: "2.0"

namespace myorg

use aws.protocols#restJson1
use smithy.framework#ValidationException

/// TODO: describe your service here
@title("TestApi")
@restJson1
service TestApi {
    version: "1.0.0"
    operations: [
        Echo
    ]
    errors: [
        ValidationException
    ]
}
"
`;
